k8s/base/ingress/ingress-moath.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moath-webapp-ingress
  namespace: moath-webapp
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.moath.local
    secretName: moath-tls-secret
  rules:
  - host: api.moath.local
    http:
      paths:
      - path: /backend-a
        pathType: Prefix
        backend:
          service:
            name: backend-a-moath
            port:
              number: 80
      - path: /backend-b
        pathType: Prefix
        backend:
          service:
            name: backend-b-moath
            port:
              number: 80
